--- a/main.html
+++ b/main.html
@@ -7,6 +7,23 @@
 </head>
 
 <body>
+	<section>
+		<p><strong>What is the capital of India</strong></p>
+		<form>
+			<label>
+				<input type="radio" name="capital" value="new-delhi">
+				New delhi
+			</label><br>
+			<label>
+				<input type="radio" name="capital" value="mumbai">
+				Mumbai
+			</label>
+		</form>
+	</section>
+
+	<blockquote>
+		 "New Delhi is the capital of India and an administrative district of NCT Delhi."
+	</blockquote>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
