--- a/main.html
+++ b/main.html
@@ -23,6 +23,7 @@
 
 	<blockquote>
 		 "New Delhi is the capital of India and an administrative district of NCT Delhi."
+		<cite> - Wikipedia</cite>
 	</blockquote>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
