--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<section>
-		<p><strong>What is the capital of India</strong></p>
+		<p><strong>What is the capital of India?</strong></p>
 		<form>
 			<label>
 				<input type="radio" name="capital" value="new-delhi">
